--- a/JustDo/Base.lproj/Main.storyboard
+++ b/JustDo/Base.lproj/Main.storyboard
@@ -49,7 +49,39 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hCU-mG-Acr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="998" y="-20"/>
+            <point key="canvasLocation" x="1413" y="-20"/>
+        </scene>
+        <!--Categorry View Controller-->
+        <scene sceneID="HHM-9X-qXp">
+            <objects>
+                <tableViewController id="Kuj-4e-P0p" customClass="CategorryViewController" customModule="JustDo" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="P2Y-gK-wAT">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="VbS-p1-hOJ">
+                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VbS-p1-hOJ" id="CcB-7T-e0R">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Kuj-4e-P0p" id="bzY-QX-MT0"/>
+                            <outlet property="delegate" destination="Kuj-4e-P0p" id="dJu-Rg-hn5"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="EJY-Ms-oaP"/>
+                    <connections>
+                        <segue destination="Drm-0f-yCo" kind="show" id="Eac-BN-UdD"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pyH-J0-Pf3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="665" y="-20"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="EpC-SE-fQ6">
@@ -74,12 +106,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Drm-0f-yCo" kind="relationship" relationship="rootViewController" id="7X0-Ff-LbU"/>
+                        <segue destination="Kuj-4e-P0p" kind="relationship" relationship="rootViewController" id="m3x-vP-LwO"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n3H-iL-UOu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="114" y="-20"/>
+            <point key="canvasLocation" x="-120" y="-20"/>
         </scene>
     </scenes>
     <resources>
