--- a/JustDo/Base.lproj/Main.storyboard
+++ b/JustDo/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ToDo List-->
+        <!--ToDo -->
         <scene sceneID="hzs-C2-A4y">
             <objects>
                 <tableViewController id="Drm-0f-yCo" customClass="JustDoViewController" customModule="JustDo" customModuleProvider="target" sceneMemberID="viewController">
@@ -38,9 +38,9 @@
                             <outlet property="delegate" destination="Drm-0f-yCo" id="Usa-j6-m0S"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDo List" id="sBI-AK-G5T">
+                    <navigationItem key="navigationItem" title="ToDo " id="sBI-AK-G5T">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="3aX-wB-IHt">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" systemColor="tintColor"/>
                             <connections>
                                 <action selector="addButtonClicked:" destination="Drm-0f-yCo" id="jmK-3I-bQj"/>
                             </connections>
@@ -51,7 +51,7 @@
             </objects>
             <point key="canvasLocation" x="1413" y="-20"/>
         </scene>
-        <!--Categories-->
+        <!--Category-->
         <scene sceneID="HHM-9X-qXp">
             <objects>
                 <tableViewController id="Kuj-4e-P0p" customClass="CategoryViewController" customModule="JustDo" customModuleProvider="target" sceneMemberID="viewController">
@@ -74,9 +74,9 @@
                             <outlet property="delegate" destination="Kuj-4e-P0p" id="dJu-Rg-hn5"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Categories" id="EJY-Ms-oaP">
+                    <navigationItem key="navigationItem" title="Category" id="EJY-Ms-oaP">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="psL-t2-bDD">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" systemColor="tintColor"/>
                             <connections>
                                 <action selector="addCatButton:" destination="Kuj-4e-P0p" id="Pxf-o5-pXS"/>
                             </connections>
@@ -98,6 +98,8 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Kyj-B4-z4U">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -105,10 +107,12 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                         <navigationBarAppearance key="scrollEdgeAppearance">
-                            <color key="backgroundColor" systemColor="tintColor"/>
-                            <textAttributes key="titleTextAttributes">
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </textAttributes>
+                            <barButtonItemAppearance key="backButtonAppearance">
+                                <barButtonItemStateAppearance key="normal"/>
+                                <barButtonItemStateAppearance key="highlighted"/>
+                                <barButtonItemStateAppearance key="disabled"/>
+                                <barButtonItemStateAppearance key="focused"/>
+                            </barButtonItemAppearance>
                         </navigationBarAppearance>
                     </navigationBar>
                     <nil name="viewControllers"/>
