--- a/JustDo/Base.lproj/Main.storyboard
+++ b/JustDo/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ToDo -->
+        <!--Yapılacaklar-->
         <scene sceneID="hzs-C2-A4y">
             <objects>
                 <tableViewController id="Drm-0f-yCo" customClass="JustDoViewController" customModule="JustDo" customModuleProvider="target" sceneMemberID="viewController">
@@ -38,7 +38,7 @@
                             <outlet property="delegate" destination="Drm-0f-yCo" id="Usa-j6-m0S"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDo " id="sBI-AK-G5T">
+                    <navigationItem key="navigationItem" title="Yapılacaklar" id="sBI-AK-G5T">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="3aX-wB-IHt">
                             <color key="tintColor" systemColor="tintColor"/>
                             <connections>
@@ -51,7 +51,7 @@
             </objects>
             <point key="canvasLocation" x="1413" y="-20"/>
         </scene>
-        <!--Category-->
+        <!--Kategoriler-->
         <scene sceneID="HHM-9X-qXp">
             <objects>
                 <tableViewController id="Kuj-4e-P0p" customClass="CategoryViewController" customModule="JustDo" customModuleProvider="target" sceneMemberID="viewController">
@@ -74,7 +74,7 @@
                             <outlet property="delegate" destination="Kuj-4e-P0p" id="dJu-Rg-hn5"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Category" id="EJY-Ms-oaP">
+                    <navigationItem key="navigationItem" title="Kategoriler" id="EJY-Ms-oaP">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="psL-t2-bDD">
                             <color key="tintColor" systemColor="tintColor"/>
                             <connections>
